@@ -2,7 +2,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 buildscript {
     repositories {
-        maven { url "https://grails.artifactoryonline.com/grails/core" }
+        maven { url "https://repo.grails.org/grails/core" }
 	//mavenRepo(urls: 'http://evgeny-goldin.org/artifactory/repo/')
     }
     dependencies {
@@ -85,7 +85,7 @@ if (jointBuildGroovyJarProperty) {
 
 allprojects {
     repositories {
-        maven { url "https://grails.artifactoryonline.com/grails/core" }
+        maven { url "https://repo.grails.org/grails/core" }
         mavenLocal()
         if(isBuildSnapshot) {
             maven { url "http://repo.grails.org/grails/libs-snapshots-local" }
@@ -174,6 +174,7 @@ subprojects { project ->
         options.encoding "UTF-8"
         options.docEncoding "UTF-8"
         options.charSet "UTF-8"
+        options.jFlags "-Xms64M", "-Xmx512M", "-XX:MaxPermSize=256m"
     }
 
     idea {
@@ -321,7 +322,7 @@ subprojects { project ->
                     }
                     }
                     if(project.hasProperty("artifactoryPublishUsername")) {
-                        snapshotRepository(url: "https://grails.artifactoryonline.com/grails/libs-snapshots-local") {
+                        snapshotRepository(url: "https://repo.grails.org/grails/libs-snapshots-local") {
                         authentication(userName: project.hasProperty("artifactoryPublishUsername") ? project.artifactoryPublishUsername : null,
                             password: project.hasProperty("artifactoryPublishPassword") ?  project.artifactoryPublishPassword : null)
                         }
